# clairvoyance

./: README.md  docker-compose.yml
bleu-daemon/: Cargo.toml  Dockerfile  README.md  config.docker.toml  config.toml
bleu-daemon/abi/: tx_enqueued.json
bleu-daemon/schema/: ethereum.json  optimism.json
bleu-daemon/src/: libs.rs  main.rs  plugin.rs  types.rs  validation.rs
bleu-daemon/src/error/: error.rs
bleu-daemon/src/libs/: convert.rs  error.rs  number.rs  opt.rs  opts.rs  postgres.rs  request.rs  rocks.rs  serde.rs  subscribe.rs
bleu-daemon/src/plugin/: elasticsearch.rs  email.rs  ethereum.rs  jsonrpc.rs  l1_tx_log.rs  l2_block_tx.rs  l2_enqueue.rs  l2_state_batch.rs  l2_tx_batch.rs  l2_tx_receipt.rs  optimism.rs  postgres.rs  rocks.rs  slack.rs  task.rs  telegram.rs
bleu-daemon/src/repository/: ethereum.rs
bleu-daemon/src/schema/: ethereum.rs
bleu-daemon/src/types/: channel.rs  enumeration.rs  postgres.rs  subscribe.rs
bleu-daemon/src/validation/: find_by_key.rs  get_task.rs  l1_tx_log.rs  l2_tx_receipt.rs  subscribe.rs  task.rs  unsubscribe.rs
bleu-daemon/task/: l1_tx_log.json  l2_block_tx.json  l2_enqueue.json  l2_state_batch.json  l2_tx_batch.json  l2_tx_receipt.json  optimism.json
bleu-server/: .dockerignore  .env.docker  .env.example  Cargo.toml  Dockerfile  README.md
bleu-server/src/: main.rs  repository.rs  schema.rs  service.rs
bleu-server/src/config/: postgres.rs  server.rs  swagger.rs
bleu-server/src/error/: error.rs
bleu-server/swagger/: package-lock.json  package.json  swagger.js
bleu-server/swagger-ui/: index.html
(+207 files in other folders)
