[package]
name = "bleu-daemon"
version = "0.1.0"
authors = ["ian <ian@turnpike.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
appbase = { git = "https://github.com/turnpike/appbase-rs" }
tokio = "1.8.1"
jsonrpc-core = "17.1.0"
jsonrpc-http-server = "17.1.0"
log = "0.4.14"
serde = "1.0.64"
serde_json = "1.0.66"
env_logger = "0.9.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
futures = "0.3.15"
rocksdb = "0.16.0"
rand = "0.8.4"
lettre = "0.10.0-rc.3"
clap = "3.0.0-beta.2"
teloxide = { version = "0.4", features = ["auto-send", "macros"] }
r2d2_postgres = "0.18.1"
